Resolve stack overflow on Safari browsers

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,7 +134,7 @@ body {
 }
 
 main {
-    height: 100vh;
+    height: 100dvh;
     width: 100vw;
     display: block;
     overflow: hidden;
